--- a/CarShop/CarShop.csproj
+++ b/CarShop/CarShop.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -17,7 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarShop.DAL\CarShop.DAL.csproj" />
     <ProjectReference Include="..\CarShop.Domain\CarShop.Domain.csproj" />
+    <ProjectReference Include="..\CarShop.Service\CarShop.Service.csproj" />
   </ItemGroup>
 
 </Project>
