Исправления вьюх и добавление профайла пользователя

--- a/CarShop/CarShop.csproj
+++ b/CarShop/CarShop.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\CarShop.Service\CarShop.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Profile\" />
+  </ItemGroup>
+
 </Project>
